<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.ACRecord">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/ar_tv_recordtype"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_income"
            android:id="@+id/ar_rb_income"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:clickable="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn_pay"
            android:id="@+id/ar_rb_pay"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="210dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:clickable="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cn_record_type"
        android:id="@+id/ar_tv_recordtype"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/relativeLayout"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cn_record_detail"
        android:id="@+id/textView"
        android:textSize="22sp"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ar_et_info"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="8dp"
        android:hint="@string/cn_reason" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/ar_et_date"
        android:layout_below="@+id/ar_et_info"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/ar_et_info"
        android:hint="@string/cn_date" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ar_et_amount"
        android:layout_below="@+id/ar_et_date"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/ar_et_date"
        android:hint="@string/cn_amount"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ar_et_note"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/ar_et_amount"
        android:layout_below="@+id/ar_et_amount"
        android:layout_marginTop="20dp"
        android:hint="@string/cn_note" />

</RelativeLayout>
