<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wxm.KeepAccount.ui.activities.ACWelcome">

    <Button
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="@string/cn_record_income"
        android:id="@+id/bt_add_income"
        android:textAlignment="center"
        android:background="@color/antiquewhite"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/tv_today"
        android:layout_marginTop="@dimen/bigbutton_top_margin"
        android:layout_alignLeft="@+id/tv_remind"
        android:drawableTop="@drawable/ic_income_record" />

    <Button
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="@string/cn_record_pay"
        android:id="@+id/bt_add_pay"
        android:drawableTop="@drawable/ic_pay_record"
        android:textAlignment="center"
        android:background="@color/antiquewhite"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:layout_alignLeft="@+id/tv_budget"
        android:layout_below="@+id/bt_lookdata"
        android:layout_marginTop="@dimen/bigbutton_top_margin" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_setting"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/antiquewhite"
        android:drawableTop="@drawable/ic_menu_setting"
        android:paddingTop="4dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="4dp"
        android:text="@string/cn_setting"
        android:textSize="10sp" />

    <TextView
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="remind"
        android:id="@+id/tv_remind"
        android:background="@color/antiquewhite"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="budget"
        android:id="@+id/tv_budget"
        android:background="@color/antiquewhite"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="16sp"
        android:layout_alignParentTop="false"
        android:layout_alignTop="@+id/tv_remind"
        android:layout_toRightOf="@+id/tv_remind"
        android:layout_marginLeft="24dp" />

    <TextView
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="today"
        android:id="@+id/tv_today"
        android:background="@color/antiquewhite"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/tv_remind"
        android:layout_below="@+id/tv_remind"
        android:layout_marginTop="@dimen/bigbutton_top_margin" />

    <Button
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="@string/cn_lookdata"
        android:id="@+id/bt_lookdata"
        android:drawableTop="@drawable/ic_datashow_01"
        android:textAlignment="center"
        android:background="@color/antiquewhite"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:layout_alignLeft="@+id/tv_budget"
        android:layout_marginTop="@dimen/bigbutton_top_margin"
        android:layout_below="@+id/tv_budget" />

    <Button
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="@string/cn_leave_login"
        android:id="@+id/bt_leave_login"
        android:layout_alignLeft="@+id/tv_remind"
        android:layout_below="@+id/bt_add_remind"
        android:layout_marginTop="@dimen/bigbutton_top_margin"
        android:background="@color/antiquewhite"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_leave_login"
        android:paddingTop="12dp" />

    <Button
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="@string/cn_edit_remind"
        android:id="@+id/bt_add_remind"
        android:textAlignment="center"
        android:background="@color/antiquewhite"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_income_record"
        android:layout_alignLeft="@+id/tv_remind"
        android:layout_below="@+id/bt_add_income"
        android:layout_marginTop="@dimen/bigbutton_top_margin" />

    <Button
        android:layout_width="@dimen/bigbutton_width"
        android:layout_height="@dimen/bigbutton_height"
        android:text="@string/cn_edit_budget"
        android:id="@+id/bt_add_budget"
        android:textAlignment="center"
        android:background="@color/antiquewhite"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_income_record"
        android:layout_alignLeft="@+id/tv_budget"
        android:layout_below="@+id/bt_add_pay"
        android:layout_marginTop="@dimen/bigbutton_top_margin" />

</RelativeLayout>
