<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wxm.KeepAccount.ui.activities.ACBudgetManager">

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_budget_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/cn_hint_budget_name"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_amount"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/til_name"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_budget_amount"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/cn_hint_budget_amount"
            android:singleLine="true"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_start_date"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/til_amount"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_budget_start_date"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/cn_hint_budget_start_date"
            android:singleLine="true"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_end_date"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/til_start_date"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_budget_end_date"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/cn_hint_budget_end_date"
            android:singleLine="true"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_note"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/til_end_date"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="false">

        <android.support.design.widget.TextInputEditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/et_budget_note"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:hint="@string/cn_hint_budget_note"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
